--- a/Formulario_Aluno.html
+++ b/Formulario_Aluno.html
@@ -62,28 +62,23 @@
         <option value="Rio_De_Janeiro">Rio de Janeiro</option>
         <option value="Sao_Paulo">|São Paulo</option>
         <option value="Minas_Gerais">Minas Gerais</option>
-        <option value="Goias">Goiás</option>
         <option value="Rio_Grande_do_sul">Rio Grande do Sul</option>
         <option value="Parana">Paraná</option>
         <option value="Ceara">Ceará</option>
         <option value="Santa_Catarina">Santa Catarina</option>
         <option value="Amazonas">Amazonas</option>
-        <option value="Pernambuco">Pernambuco</option>
         <option value="Para">Pará</option>
-        <option value="Mato_Grosso"></option>
+        <option value="Mato_Grosso">Mato Grosso</option>
         <option value="Rio_Grande_do_norte">Rio Grande Do Norte</option>
         <option value="Mato_Grosso_do_Sul">Mato Grosso do Sul</option>
         <option value="Sergipe">Sergipe</option>
         <option value="Maranhao">Maranhão</option>
         <option value="Espirito_santo">Espírito Santo</option>
-        <option value="Paraiba">Paraíba</option>
         <option value="Alagoas">Alagoas</option>
-        <option value="Rondonia">Rondônia</option>
         <option value="Roraima">Roraima</option>
         <option value="Tocantins">Tocantins</option>
         <option value="Piaui">Piauí</option>
         <option value="Acre">Acre</option>
-        <option value="Amapa">Amapá</option>
       </select>
 
       <br />
